tests/functional/fail/use_of_static_global.stderr
error[E0425]: cannot find value `GLOBAL` in this scope
 --> tests/functional/fail/use_of_static_global.rs:6:10
  |
6 |     i1 + GLOBAL
  |          ^^^^^^ not found in this scope
  |
  = help: consider importing this static:
          crate::GLOBAL
